<resources>
    <string name="app_name">语音计时</string>
    <string name="notification_channel_timer">计时器</string>
    <string name="notification_channel_update">应用更新</string>
    <string name="ready">准备好了</string>
    <string name="zero_time">00:00</string>
    <string name="voice_hint">说“计时10秒”或“倒计时3分钟”</string>
    <string name="start_listening">🎙  开始说话</string>
    <string name="cancel_timer">取消计时</string>
    <string name="version_format">v%1$s</string>
    <string name="heard_format">听到：%1$s</string>
    <string name="update_found_format">发现新版本 %1$s，后台下载中</string>
    <string name="wake_enable">开启后台唤醒</string>
    <string name="wake_disable">关闭后台唤醒</string>
    <string name="wake_hint">唤醒词：“计时助手”</string>
    <string name="notification_channel_wake">后台语音唤醒</string>
</resources>
